# serializer version: 1
# name: TestPerson.test_filter_person_email
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['another@gmail.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_email_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['another@gmail.com'], "pmat_email")
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_list
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND id IN
    (SELECT person_id
     FROM
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0)
     where distinct_id = 'distinct_id' )
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_list.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND id IN
    (SELECT person_id
     FROM
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0)
     where distinct_id = 'another_one' )
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_list.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['another@gmail.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_list.3
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['inexistent'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_list.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND id IN
    (SELECT person_id
     FROM
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0)
     where distinct_id = 'inexistent' )
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_filter_person_prop
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (has(['some_value'], replaceRegexpAll(JSONExtractRaw(properties, 'some_prop'), '^"|"$', ''))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (has(['some_value'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'some_prop'), '^"|"$', '')))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_person_property_values
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ifNull(notEquals(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ''), 1)))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY count DESC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPerson.test_person_property_values.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ifNull(notEquals(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ''), 1), ifNull(ilike(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), '%qw%'), 0)))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1), ifNull(ilike(toString(persons.properties___random_prop), '%qw%'), 0))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY length(toString(persons.properties___random_prop)) ASC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPerson.test_person_property_values_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(nullIf(nullIf(person.pmat_random_prop, ''), 'null')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ifNull(notEquals(toString(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ''), 1)))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY count DESC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPerson.test_person_property_values_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(nullIf(nullIf(person.pmat_random_prop, ''), 'null')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ifNull(notEquals(toString(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ''), 1), ilike(where_optimization.pmat_random_prop, '%qw%')))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1), ifNull(ilike(toString(persons.properties___random_prop), '%qw%'), 0))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY length(toString(persons.properties___random_prop)) ASC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPerson.test_properties
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (JSONHas(properties, 'email')) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (JSONHas(argMax(person.properties, version), 'email'))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_properties.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%another@gm%') )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%another@gm%')
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_properties_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (notEmpty("pmat_email")) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (notEmpty(argMax(person."pmat_email", version)))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_properties_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ("pmat_email" ILIKE '%another@gm%') )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (argMax(person."pmat_email", version) ILIKE '%another@gm%')
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_search
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%another@gm%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'another@gm' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%another@gm%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'another@gm' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_search.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%distinct_id_3%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'distinct_id_3' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%distinct_id_3%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'distinct_id_3' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_search_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (("pmat_email" ILIKE '%another@gm%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'another@gm' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%another@gm%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'another@gm' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_search_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (("pmat_email" ILIKE '%distinct_id_3%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'distinct_id_3' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%distinct_id_3%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'distinct_id_3' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_search_person_id
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%00000000-0000-4000-8000-000000000000%')
              OR (id = '00000000-0000-4000-8000-000000000000'
                  OR id IN
                    (SELECT person_id
                     FROM
                       (SELECT distinct_id,
                               argMax(person_id, version) as person_id
                        FROM person_distinct_id2
                        WHERE team_id = 99999
                        GROUP BY distinct_id
                        HAVING argMax(is_deleted, version) = 0)
                     WHERE distinct_id = '00000000-0000-4000-8000-000000000000' ))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%00000000-0000-4000-8000-000000000000%')
       OR (id = '00000000-0000-4000-8000-000000000000'
           OR id IN
             (SELECT person_id
              FROM
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 99999
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0)
              WHERE distinct_id = '00000000-0000-4000-8000-000000000000' )))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPerson.test_search_person_id_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (("pmat_email" ILIKE '%00000000-0000-4000-8000-000000000000%')
              OR (id = '00000000-0000-4000-8000-000000000000'
                  OR id IN
                    (SELECT person_id
                     FROM
                       (SELECT distinct_id,
                               argMax(person_id, version) as person_id
                        FROM person_distinct_id2
                        WHERE team_id = 99999
                        GROUP BY distinct_id
                        HAVING argMax(is_deleted, version) = 0)
                     WHERE distinct_id = '00000000-0000-4000-8000-000000000000' ))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%00000000-0000-4000-8000-000000000000%')
       OR (id = '00000000-0000-4000-8000-000000000000'
           OR id IN
             (SELECT person_id
              FROM
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 99999
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0)
              WHERE distinct_id = '00000000-0000-4000-8000-000000000000' )))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_email
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['another@gmail.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_email_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['another@gmail.com'], "pmat_email")
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_list
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND id IN
    (SELECT person_id
     FROM
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0)
     where distinct_id = 'distinct_id' )
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_list.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND id IN
    (SELECT person_id
     FROM
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0)
     where distinct_id = 'another_one' )
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_list.2
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['another@gmail.com'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_list.3
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND has(['inexistent'], replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', ''))
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_list.4
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND id IN
    (SELECT person_id
     FROM
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 99999
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0)
     where distinct_id = 'inexistent' )
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_filter_person_prop
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (has(['some_value'], replaceRegexpAll(JSONExtractRaw(properties, 'some_prop'), '^"|"$', ''))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (has(['some_value'], replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'some_prop'), '^"|"$', '')))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_person_property_values
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ifNull(notEquals(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ''), 1)))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY count DESC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonFromClickhouse.test_person_property_values.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(person.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ifNull(notEquals(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), ''), 1), ifNull(ilike(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(where_optimization.properties, 'random_prop'), ''), 'null'), '^"|"$', '')), '%qw%'), 0)))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1), ifNull(ilike(toString(persons.properties___random_prop), '%qw%'), 0))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY length(toString(persons.properties___random_prop)) ASC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonFromClickhouse.test_person_property_values_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(nullIf(nullIf(person.pmat_random_prop, ''), 'null')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ifNull(notEquals(toString(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ''), 1)))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY count DESC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonFromClickhouse.test_person_property_values_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT persons.properties___random_prop AS value,
         count() AS count
  FROM
    (SELECT tupleElement(argMax(tuple(nullIf(nullIf(person.pmat_random_prop, ''), 'null')), person.version), 1) AS properties___random_prop,
            person.id AS id
     FROM person
     WHERE and(equals(person.team_id, 99999), in(id,
                                                   (SELECT where_optimization.id AS id
                                                    FROM person AS where_optimization
                                                    WHERE and(equals(where_optimization.team_id, 99999), isNotNull(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ifNull(notEquals(toString(nullIf(nullIf(where_optimization.pmat_random_prop, ''), 'null')), ''), 1), ilike(where_optimization.pmat_random_prop, '%qw%')))))
     GROUP BY person.id
     HAVING and(ifNull(equals(tupleElement(argMax(tuple(person.is_deleted), person.version), 1), 0), 0), ifNull(less(tupleElement(argMax(tuple(toTimeZone(person.created_at, 'UTC')), person.version), 1), plus(now64(6, 'UTC'), toIntervalDay(1))), 0))) AS persons
  WHERE and(isNotNull(persons.properties___random_prop), ifNull(notEquals(toString(persons.properties___random_prop), ''), 1), ifNull(ilike(toString(persons.properties___random_prop), '%qw%'), 0))
  GROUP BY persons.properties___random_prop
  HAVING ifNull(greater(count, 0), 0)
  ORDER BY length(toString(persons.properties___random_prop)) ASC
  LIMIT 20 SETTINGS readonly=2,
                    max_execution_time=60,
                    allow_experimental_object_type=1,
                    format_csv_allow_double_quotes=0,
                    max_ast_elements=4000000,
                    max_expanded_ast_elements=4000000,
                    max_bytes_before_external_group_by=0,
                    transform_null_in=1,
                    optimize_min_equality_disjunction_chain_length=4294967295,
                    allow_experimental_join_condition=1,
                    use_hive_partitioning=0
  '''
# ---
# name: TestPersonFromClickhouse.test_properties
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (JSONHas(properties, 'email')) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (JSONHas(argMax(person.properties, version), 'email'))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_properties.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%another@gm%') )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%another@gm%')
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_properties_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (notEmpty("pmat_email")) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (notEmpty(argMax(person."pmat_email", version)))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_properties_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ("pmat_email" ILIKE '%another@gm%') )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND (argMax(person."pmat_email", version) ILIKE '%another@gm%')
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_search
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%another@gm%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'another@gm' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%another@gm%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'another@gm' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_search.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%distinct_id_3%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'distinct_id_3' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%distinct_id_3%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'distinct_id_3' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_search_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (("pmat_email" ILIKE '%another@gm%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'another@gm' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%another@gm%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'another@gm' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_search_materialized.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (("pmat_email" ILIKE '%distinct_id_3%')
              OR id IN
                (SELECT person_id
                 FROM
                   (SELECT distinct_id,
                           argMax(person_id, version) as person_id
                    FROM person_distinct_id2
                    WHERE team_id = 99999
                    GROUP BY distinct_id
                    HAVING argMax(is_deleted, version) = 0)
                 WHERE distinct_id = 'distinct_id_3' )) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%distinct_id_3%')
       OR id IN
         (SELECT person_id
          FROM
            (SELECT distinct_id,
                    argMax(person_id, version) as person_id
             FROM person_distinct_id2
             WHERE team_id = 99999
             GROUP BY distinct_id
             HAVING argMax(is_deleted, version) = 0)
          WHERE distinct_id = 'distinct_id_3' ))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_search_person_id
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND ((replaceRegexpAll(JSONExtractRaw(properties, 'email'), '^"|"$', '') ILIKE '%00000000-0000-4000-8000-000000000000%')
              OR (id = '00000000-0000-4000-8000-000000000000'
                  OR id IN
                    (SELECT person_id
                     FROM
                       (SELECT distinct_id,
                               argMax(person_id, version) as person_id
                        FROM person_distinct_id2
                        WHERE team_id = 99999
                        GROUP BY distinct_id
                        HAVING argMax(is_deleted, version) = 0)
                     WHERE distinct_id = '00000000-0000-4000-8000-000000000000' ))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((replaceRegexpAll(JSONExtractRaw(argMax(person.properties, version), 'email'), '^"|"$', '') ILIKE '%00000000-0000-4000-8000-000000000000%')
       OR (id = '00000000-0000-4000-8000-000000000000'
           OR id IN
             (SELECT person_id
              FROM
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 99999
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0)
              WHERE distinct_id = '00000000-0000-4000-8000-000000000000' )))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
# name: TestPersonFromClickhouse.test_search_person_id_materialized
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT id
  FROM person
  WHERE team_id = 99999
    AND id IN
      (SELECT id
       FROM person
       WHERE team_id = 99999
         AND (("pmat_email" ILIKE '%00000000-0000-4000-8000-000000000000%')
              OR (id = '00000000-0000-4000-8000-000000000000'
                  OR id IN
                    (SELECT person_id
                     FROM
                       (SELECT distinct_id,
                               argMax(person_id, version) as person_id
                        FROM person_distinct_id2
                        WHERE team_id = 99999
                        GROUP BY distinct_id
                        HAVING argMax(is_deleted, version) = 0)
                     WHERE distinct_id = '00000000-0000-4000-8000-000000000000' ))) )
  GROUP BY id
  HAVING max(is_deleted) = 0
  AND argMax(person.created_at, version) < now() + INTERVAL 1 DAY
  AND ((argMax(person."pmat_email", version) ILIKE '%00000000-0000-4000-8000-000000000000%')
       OR (id = '00000000-0000-4000-8000-000000000000'
           OR id IN
             (SELECT person_id
              FROM
                (SELECT distinct_id,
                        argMax(person_id, version) as person_id
                 FROM person_distinct_id2
                 WHERE team_id = 99999
                 GROUP BY distinct_id
                 HAVING argMax(is_deleted, version) = 0)
              WHERE distinct_id = '00000000-0000-4000-8000-000000000000' )))
  ORDER BY argMax(person.created_at, version) DESC, id DESC
  LIMIT 100 SETTINGS optimize_aggregation_in_order = 1
  '''
# ---
